# nemo-admin

./: AUTHORS  CMakeLists.txt  README.md  generate-pot-file.sh  nemo-admin.appdata.xml
.github/workflows/: release.yml
debian/: changelog  control  copyright  rules
extension/: nemo-admin.py  nemo-extension-admin.py
po/: ko.po  nemo-admin.pot
